# nse-scraper

./: .gitignore  README.md  build.py  getData.js  gui.py  pyproject.toml  requirements.txt  storeData.py
