[tool.poetry]
name = "nse-scraper"
version = "0.1.0"
description = "Project to fetch information from the NSE website"
authors = ["Arun Shekar <shekar.arun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
brotli = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
